--- a/README.ipynb
+++ b/README.ipynb
@@ -45,7 +45,7 @@
     "## Ordem Recomendada para Leitura\n",
     "\n",
     "Sugere-se a seguinte sequência para melhor compreensão:  \n",
-    "`koalas_dask` → `modin_joblib` → `conclusions` → `machine_learning`.\n",
+    "`koalas_dask` → `modin_joblib` → `conclusions` → `machine_learning`..\n",
     "\n",
     "---\n",
     "\n",
